syntax = "proto3";

import "google/protobuf/empty.proto";

package rpc;

message Clock {
  uint64 clock = 1;
}

message EmptyRequest{
  bool empty = 1;
};

message ModelPull{
  string name = 1;
  uint64 clock = 2;
};

message DoubleList {
  uint64 clock = 1;
  string model_name = 2;
  repeated double ws1 = 3;
  repeated double bs1 = 4;
}

message WorkerStatus {
  uint64 clock = 1;
  bool done = 2;
}

message WeightsPair {
  string key = 1;
  repeated double value = 2;
}

//message QueuePair {
//  string key = 1;
//  repeated WorkerStatus value = 2;
//}

message ModelDump {
  repeated WorkerStatus updater_queue = 1;
  repeated WeightsPair ws1 = 2;
  repeated WeightsPair bs1 = 3;
  double lr = 4;
}

service ParameterServer {
  rpc initialize(DoubleList) returns(EmptyRequest);
  rpc set_ready(EmptyRequest) returns (EmptyRequest);
  rpc get_ready(EmptyRequest) returns (EmptyRequest);
  rpc pull(ModelPull) returns (DoubleList);
  rpc push(DoubleList) returns (EmptyRequest);
  rpc clock(Clock) returns (Clock);
  rpc get_model_dump(google.protobuf.Empty) returns (ModelDump);
  rpc merge_model_dump(ModelDump) returns (EmptyRequest);
}
